# skypeopensource2

./: CMakeLists.txt  CONTRIBUTING.md  README.md
crypto/: CMakeLists.txt  md5.c  md5.h  rijndael.c  rijndael.h  sha1.c  sha1.h
goodrecvrelay/: CMakeLists.txt  README.md  blob_newblk_recv.c  chatrecv_newchat_init.c  chatrecv_restorechat.c  crc32_util.c  cred_util.c  decode41.h  dh_384.c  for_cmd.c  for_dll.c  get_blob.c  goodrecvrelay3.c  goodrecvrelay4_dll.cpp  headers_util.c  miramax.c  recovery_signed_data.c  relay_main.c  restore_key.c  short_types.h  skypush3.c  skyrel3.c  skyrelay2.c  sock_comm.c  sock_comm_udp.c  sqllite_recv.c  sqllite_util.c  tcp_dbio.c  tcp_fileio.c  tcp_newblk_prep.c  tcp_pkt.c  tcp_recv.c  tcp_sess1.c  tcp_sess1_old.c  tcp_setup.c  tools_file.c  udp_pkt.c  unicode.c  util.c
goodrecvrelay/blobs/: blob6D_cmd0C_chatend.c  blob6D_cmd13_sendheaders2.c  blob6D_cmd1B_closeconnect.c  blob6D_cmd27_finish.c  blob6D_cmd2A_headerssign.c  blob6D_cmd2B_msgbody.c  blob6Dreq.c  blob7A.c  blob7B.c  blob_enc.c  blob_newblk.c  recv_blob6D_cmd10_pos2.c  recv_blob6D_cmd13_sendheaders2.c  recv_blob6D_cmd13_sendheaders3.c  recv_blob6D_cmd15_reqmsgbody.c  recv_blob6D_cmd27_finish.c  recv_blob6D_cmd29_sign2req.c  recv_blob6D_cmd2B_msgbody.c
goodrecvrelay/tmp/: chatrecv_restorechat.c
goodrecvrelay/tmp/cmpppp/: chat_my.c  chatrecv_restorechat.c
goodrecvrelay3/: CMakeLists.txt  chatrecv_restorechat.c  dh_384.c  for_cmd.c  for_dll.c  goodrecvrelay3.c  headers_util.c  miramax.c  recovery_signed_data.c  relay_main.c  restore_key.c  skyrelay2.c  sock_comm.c  sqllite_util.c  tcp_fileio.c  tcp_newblk_prep.c  tcp_pkt.c  tcp_recv.c  tcp_sess1.c  tcp_sess1_old.c  tcp_setup.c  udp_pkt.c  unicode.c  util.c
goodrecvrelay4_dll/: CMakeLists.txt  chatrecv_newchat_init.c  chatrecv_restorechat.c  dh_384.c  for_cmd.c  goodrecvrelay4_dll.h  mycrypto.c  sock_comm_udp.c  sqllite_recv.c  tcp_dbio.c  tcp_newblk_prep.c  tcp_recv.c  tcp_sess1.c  tcp_sess1_old.c  tcp_setup.c  udp_pkt.c  util.c
goodsendrelay/: CMakeLists.txt  README.md  chatsend_newchat_init.c  chatsend_restorechat.c  chatsend_restorechat2.c  crc32_util.c  cred_util.c  dbsql.h  defs.h  dh_384.c  for_cmd.c  for_dll.c  get_blob.c  get_blob2.c  get_blob3.c  goodsendrelay3.c  goodsendrelay4_dll.h  headers_util.c  headers_util.h  miramax.c  recovery_signed_data.c  relay_main.c  relays_util.h  restore_key.c  short_types.h  skypush3.c  skyrel3.c  skyrelay2.c  sock_comm.c  sock_comm_udp.c  sqllite_send.c  tcp_dbio.c  tcp_fileio.c  tcp_newblk_prep.c  tcp_pkt.c  tcp_recv.c  tcp_sess1.c  tcp_setup.c  tools_file.c  udp_pkt.c  (+3 more)
goodsendrelay/blobs/: blob1.c  blob2.c  blob53.c  blob5E.c  blob6D_cmd0C_chatend.c  blob6D_cmd0D_chatinit.c  blob6D_cmd10_unkheader.c  blob6D_cmd27_finish.c  blob6D_cmd2A_headerssign.c  blob6D_cmd46_chatend.c  blob6Dreq.c  blob7D.c  blob_enc.c  blob_newblk.c  recv_blob6D_cmd15.c  recv_blob6D_error.c
goodsendrelay3/: CMakeLists.txt  chatsend_newchat_init.c  chatsend_restorechat.c  crc32_util.c  cred_util.c  dh_384.c  for_cmd.c  for_dll.c  goodsendrelay3.c  miramax.c  restore_key.c  skyrelay2.c  sock_comm_udp.c  tcp_dbio.c  tcp_newblk_prep.c  tcp_pkt.c  tcp_recv.c  tcp_sess1.c  tcp_setup.c  util.c
goodsendrelay4_dll/: CMakeLists.txt  chatsend_newchat_init.c  chatsend_restorechat2.c  dbsql.h  (+22 more)
miracl/: CMakeLists.txt  miracl.h  mirdef.h  mrarth0.c  mrarth1.c  mrarth3.c  mrbits.c  mrcrt.c  mrcurve.c  mrdouble.c  mrec2m.c  mrecn2.c  mrfast.c  mrflsh2.c  mrflsh3.c  mrfrnd.c  mrgcd.c  mrgcm.c  mrjack.c  mrlucas.c  mrmonty.c  mrmuldv.c  mrpi.c  mrprime.c  mrshs512.c  mrsroot.c  mrzzn2.c  mrzzn2b.c  mrzzn3.c
skyauth/: CMakeLists.txt  README.md  blob_enc.c  blob_login.c  dh_384.c  dllmain.cpp  dump.c  for_dll.c  miramax.c  skyauth3.c  skyauth4.c  skyauth4_dll.cpp  skype_login.c  sock_comm.c  stdafx.cpp  stdafx.h  targetver.h  tcp_setup.c  util.c  util_printf.c
skyauth3/: CMakeLists.txt  dh_384.c  dump.c  miramax.c  skyauth3.c  skype_login.c  tcp_setup.c
skyauth4_dll/: CMakeLists.txt  dh_384.c  miramax.c  skyauth4.c  skyauth4_dll.h  skype_login.c  sock_comm.c  tcp_setup.c
skyauth4_dll/miracl_lib/: miracl.h  mirdef.h  mraes.c  mralloc.c  mrarth2.c  mrbits.c  mrbrick.c  mrbuild.c  mrcore.c  mrebrick.c  mrflash.c  mrflsh1.c  mrflsh4.c  mrgf2m.c  mrio1.c  mrio2.c  mrjack.c  mrmuldv.c  mrpower.c  mrrand.c  mrround.c  mrscrt.c  mrshs.c  mrshs256.c  mrsmall.c  mrstrong.c  mrxgcd.c  mrzzn2b.c  mrzzn3.c
skycontact3/: CMakeLists.txt  blob_auth2.c  crc32_util.c  decode41.h  dh_384.c  for_dll.c  get_blob.c  miramax.c  skycontact3.c  skype_login.c  sock_comm.c  tcp_recv.c  tcp_setup.c  util.c
skycontact4_dll/: CMakeLists.txt  blob_auth4.c  crc32_util.c  skycontact3.c  skycontact4_dll.h  skype_login.c  tcp_recv.c  tcp_setup.c  util.c
skyrelay/: CMakeLists.txt  README.md  decode41.c  decode41.h  dh384.c  dh384_setup.c  for_dll.c  get_blob.c  miramax.c  skypush3.c  skyrel3.c  skyrelay3.c  skyrelay4_dll.cpp  skyrelay4_dll.h  sock_comm.c  sock_comm_udp.c  tcp_pkt.c  tcp_recv.c  udp_pkt.c  util.c
skyrelay3/: CMakeLists.txt  crc32_util.c  decode41.c  dh384.c  dh384_setup.c  for_cmd.c  get_blob.c  short_types.h  skypush3.c  skyrel3.c  skyrelay3.c  sock_comm.c  tcp_recv.c  udp_pkt.c  util.c
skyrelay4_dll/: CMakeLists.txt  decode41.c  dh384_setup.c  for_dll.c  miramax.c  relays_util.h  skyrelay3.c  skyrelay4_dll.h  sock_comm_udp.c  tcp_pkt.c  tcp_recv.c  util.c
skysearch/: CMakeLists.txt  README.md  blob_snode1.c  decode_profile.c  decode_profile2.c  for_cmd.c  for_dll.c  get_blob.c  miramax.c  skysearch3.c  slots_util.c  slots_util.h  sock_comm.c  sock_comm_udp.c  tcp_setup.c  util.c  vcard_save.c
skysearch3/: CMakeLists.txt  blob_snode1.c  decode_profile.c  decode_profile2.c  for_dll.c  get_blob.c  miramax.c  skysearch3.c  slots_util.c  sock_comm.c  tcp_setup.c  udp_pkt.c  util.c
skysearch4_dll/: CMakeLists.txt  decode_profile.c  for_cmd.c  skysearch4_dll.cpp  skysearch4_dll.h  tcp_setup.c  udp_pkt.c  util.c
sqldbread/: CMakeLists.txt  for_cmd.c  for_dll.c  sqllite_dbread.c  sqllite_util.c  unicode.c  util.c  util_printf.c
(+115 files in other folders)
